[package]
name = "github-bot"
version = "0.1.0"
authors = ["DeltaChatBot Contributers<https://github.com/deltachat-bot>"]
edition = "2021"

[dependencies]
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust.git", branch="sk/new_apis"}
tokio = { version = "^1.21", features = ["rt-multi-thread", "macros", "signal"]}
clap = {version="^4.0", features=["derive", "cargo"]}
anyhow = "^1.0"
thiserror="^1.0"
serde = "^1.0"
serde_json = "^1.0"
log = "^0.4"
env_logger = "0.10.0"
surrealdb = {git="https://github.com/surrealdb/surrealdb", features = ["kv-rocksdb"]}
itertools = "^0.10"
ts-rs = "*"
rand = "*"
async_zip = {version="0.0.15", features=["full"]}
base64-compat = "1.0.0"
qr2term = "*"